# projects/chess.com/services/server/src/common/types/index.ts
@@ -11,3 +11,5 @@ export type EvaluationSymbol = '??' | '?' | '?!' | '!?' | '!' | '!!';
 
 export type File = 'a' | 'b' | 'c' | 'd' | 'e' | 'f' | 'g' | 'h';
 export type Rank = '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8';
+
+export type TimeRange = 'WEEK' | 'MONTH' | 'QUARTER' | 'YEAR';
