# projects/chess.com/services/server/src/modules/player/insights/insights.constants.ts
@@ -1,27 +1,0 @@
-export const RULE = 'chess';
-export const WIN_RESULTS: string[] = ['win'];
-export const DRAW_RESULTS: string[] = [
-  '50move',
-  'agreed',
-  'insufficient',
-  'repetition',
-  'stalemate',
-  'timevsinsufficient',
-];
-export const LOSS_RESULTS: string[] = [
-  'checkmated',
-  'resigned',
-  'timeout',
-  'abandoned',
-];
-
-export const DAYS_OF_WEEK = [
-  'sunday',
-  'monday',
-  'tuesday',
-  'wednesday',
-  'thursday',
-  'friday',
-  'saturday',
-];
-export const TIME_OF_DAYS = ['night', 'morning', 'afternoon', 'evening'];
