# projects/chess.com/services/server/src/modules/player/insights/services/opponents/opponents.types.ts
@@ -1,7 +1,0 @@
-export type Opponent = {
-  opponent: string;
-  games: number;
-  win: number;
-  draw: number;
-  loss: number;
-};
